name:                yapan
version:             0.1.0.0
synopsis:            Alternative approach to universal document converter
description:         Alternative approach to universal document converter
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII <konn.jinro_at_gmail.com>
maintainer:          Hiromi ISHII <konn.jinro_at_gmail.com>
copyright:           (c) Hiromi ISHII 2015
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag patterns
  description:  Provide pattern synonyms?
  default:      True

source-repository head
  type: git
  location: git://github.com/konn/yapan.git

library
  exposed-modules:     Text.Yapan
                     , Text.Yapan.Base
                     , Data.OpenUnion2
                     , Data.Bifunctor.Free
  if flag(patterns) && impl(ghc >= 7.8.3)
    exposed-modules:   Text.Yapan.Patterns
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                     , bifunctors   >= 4.1
                     , constraints >= 0.4
                     , extensible >= 0.2.3
                     , kan-extensions >= 4.1.1
                     , lens >= 4.7
                     , prelude-extras >= 0.4
                     , transformers   >= 0.3
                     , type-natural >= 0.2.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
